--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://class.csslcloud.net/static/dist/js/websdk_4.0.js"></script>
 </html>
